backend/DEMAOVERFLOW_backEnd/src/main/java/org/example/demaoverflow_backend/global/error/exception/ErrorCode.java
package org.example.demaoverflow_backend.global.error.exception;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public enum ErrorCode {

    // general
    BAD_REQUEST(400, "잘못된 요청입니다."),
    INTERNAL_SERVER_ERROR(500, "서버 에러");

    private final int StatusCode;
    private final String message;
}
